apps/s3-shipper/deployment/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: s3-shipper
  labels:
    openshift.io/cluster-monitoring: "false"
    #pod-security.kubernetes.io/enforce: privileged
    #pod-security.kubernetes.io/audit: privileged
    #pod-security.kubernetes.io/warn: privileged
