apps/s3-shipper/deployment/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: s3-shipper
spec:
  selector:
    app: s3-shipper
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
